Fixed the margin of the modal while on mobile screens

--- a/css/work.css
+++ b/css/work.css
@@ -330,6 +330,6 @@
     }
 
     .education-modal-content {
-        margin: 10% auto; /* Centers the modal */
+        margin: 30% auto; /* Centers the modal */
     }
 }
